sandc/test/fixtures/astRegression/shouldSucceed/productions/strPseudex/ThrowPseudex.sand
pub class ThrowPseudex {
    foo() {
        return throw b;

        return if cond {
            throw b
        } else {
            b
        };
    }
}