sandc/test/fixtures/astRegression/shouldFail/productions/ifPseudex/ElseBlockStatement.sand
pub class ElseBlockStatement {
    foo() {
        let a = if cond {
            b
        } else {
            foo();
        };
    }
}